Fix bug with zIndex in articles and fix displaying thumbnails on mobile devices

--- a/src/components/Article/header.module.scss
+++ b/src/components/Article/header.module.scss
@@ -4,6 +4,7 @@
   margin: 0;
   padding: $spacing * 5 $spacing;
   position: relative;
+  z-index: 1;
   min-height: 12rem;
   display: flex;
   justify-content: center;
